fixed title overflow

--- a/src/components/Error/css/style.css
+++ b/src/components/Error/css/style.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=style.css.map */
+h3 {
+  max-width: 100%;
+  overflow-wrap: break-word;
+}/*# sourceMappingURL=style.css.map */
